Fix y-overflow.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -162,7 +162,6 @@ body {
   background-color:   #262626;
   max-width: 100vw !important;
   overflow-x: hidden !important;
-  overflow-y: hidden !important;
   height: auto !important;
 }
 
